# go_subtitle

./: .gitignore  LICENSE  MANIFEST.in  README.md  demo.ipynb  hello.py  pyproject.toml  requirements.txt  setup.py  test.py
assets/: demo.ipynb
data/result/Mojito_subtitle/: Mojito.json  Mojito.srt  Mojito.tsv  Mojito.txt  Mojito.vtt
data/result/平凡之路_subtitle/: 平凡之路.json  平凡之路.srt  平凡之路.tsv  平凡之路.txt  平凡之路.vtt
data/result/我记得_subtitle/: 我记得.json  我记得.srt  我记得.tsv  我记得.txt  我记得.vtt
data/result/接触_subtitle/: 接触.json  接触.srt  接触.tsv  接触.txt  接触.vtt
data/result/杀死那个石家庄人_subtitle/: 杀死那个石家庄人.json  杀死那个石家庄人.srt  杀死那个石家庄人.tsv  杀死那个石家庄人.txt  杀死那个石家庄人.vtt
data/result/认同_subtitle/: 认同.json  认同.srt  认同.tsv  认同.txt  认同.vtt
go_subtitle.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
subtitler/: __init__.py  __main__.py  app.py  audio.py  shell.py  transcribe.py  utils.py  weight.py
tests/: test_fast_whisper.py
