[project]
name = "gosubtitle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.1.1",
    "ffmpeg-python>=0.2.0",
    "filetype>=1.2.0",
    "more-itertools>=10.6.0",
    "numba>=0.61.0",
    "numpy>=2.1.3",
    "regex>=2024.11.6",
    "tiktoken>=0.8.0",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
]
