[project]
name = "gosubtitle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.1.1",
    "ffmpeg-python>=0.2.0",
    "filetype>=1.2.0",
    "more-itertools>=10.6.0",
    "numba>=0.61.0",
    "numpy>=2.1.3",
    "regex>=2024.11.6",
    "tiktoken>=0.8.0",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
torch = [
    { index = "cu124", marker = "platform_system == 'Windows'" },
    { index = "cu124", marker = "platform_system == 'Linux'" },
]

[[tool.uv.index]]
name = "cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[project.scripts]
subtitler = "subtitler.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["subtitler"]
include = [
    "subtitler/assets/*",
    "subtitler/normalizers/*",
    "pyproject.toml",
    "requirements.txt",
    "README.md",
    "LICENSE",
]
exclude = ["**/__pycache__"]
